consertado o caminho da logo UP no footer do projeto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <img src="./../assets/svgs/Logo UP P&B.svg" class="img-fluid LogoBottom"alt="">
+                <img src="assets/svgs/Logo UP P&B.svg" class="img-fluid LogoBottom"alt="">
             </div>
             <div class="col">
                 <p class="textoConsultoria"> Consultoria contábil e tributária que se dedica a cada ponto importante para que você não 
