--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,16 +1,13 @@
-nav{
-    padding-left: 200px;
-    padding-right: 200px;
-}
-
 .navbar{
-    height: 60px;
+    min-height: 60px;
     font-family: Montserrat;    
     font-weight: 900;
+    color: #707070;
 }
 
-li :active{
-    text-decoration: underline;
+.active {
+    height: 35px;
+    border-bottom: 1px solid #707070;
 }
 
 .logoNavBarTop{
@@ -59,10 +56,14 @@ li :active{
 }
 
 /** Conteudo de acordo com tela variavel **/
-@media (min-width: 992px){
+@media (min-width: 768px){
+    nav{
+        padding-left: 150px;
+    }
+
     .navbar ul {
         float: right;
-        right: 30px;
+        right: 100px;
         position: absolute;
     } 
 }
