--- a/src/app/component/home-page/home-page.component.css
+++ b/src/app/component/home-page/home-page.component.css
@@ -1,7 +1,7 @@
 
 /* Estilos do carrosel de imagens */
 .imgsCarousel{
-    max-height: 600px;
+    max-height: 100vh;
     -webkit-filter: brightness(60%);
 }
 
@@ -11,13 +11,13 @@
 }
 
 .carousel-caption h5{
-    font-size: 70px;
+    font-size: 6vw;
     text-transform: uppercase;
     font-weight: 700;
 }
 .carousel-caption p{
     max-width: 500px;
-    font-size: 15px;
+    font-size: 1vw;
 }
 
 /* Imagem abaixo do carousel */ 
@@ -29,23 +29,23 @@
 
 .imgWithText{
     width: 100%;
-    max-height: 500px;
+    max-height: 100vh;
     -webkit-filter: brightness(60%);
 }
 
 .legendaFoto{
     position: absolute;
-    top: 80px;
-    left: 150px;
-    max-width: 500px;
+    top: 10vh;
+    left: 10vw;
+    max-width: 60vw;
 }
 .legendaFoto h5{
     text-transform: uppercase;
-    font-size: 45px;
+    font-size: 5vw;
     font-weight: 700px;
 }
 .legendaFoto p{
-    font-size: 15px;
+    font-size: 1.5vw;
 }
 
 .legendaFoto a{
