corrigido nome do icone

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
                 </p>
             </div>
             <div class="col-1">
-                <a (click)="scrollToElement(target)"> <img src="./../assets/svgs/Ícone Top.svg" class="topIcon"alt=""> </a> 
+                <a (click)="scrollToElement(target)"> <img src="assets/svgs/Ícone Top.svg" class="topIcon"alt=""> </a> 
             </div>
         </div>
     </div>
