--- a/src/app/component/const/const.component.html
+++ b/src/app/component/const/const.component.html
@@ -1,3 +1,7 @@
-<div class="display-3 text-center mt-5"> Página {{ pageName }} em construção </div>
 
-<img src="assets\Nova pasta\Site-em-Construcao.gif" alt="" srcset="" class="img-fluid mx-auto d-block">
+<div class="constDiv">
+    <div class="display-3 text-center mt-5"> Página {{ pageName }} em construção </div>
+
+    <img src="assets\Nova pasta\Site-em-Construcao.gif" alt="" srcset="" class="img-fluid mx-auto d-block">
+</div>
+
