--- a/src/app/component/home-page/home-page.component.css
+++ b/src/app/component/home-page/home-page.component.css
@@ -37,15 +37,15 @@
     position: absolute;
     top: 10vh;
     left: 10vw;
-    max-width: 60vw;
+    max-width: 500px;
 }
 .legendaFoto h5{
     text-transform: uppercase;
     font-size: 5vw;
-    font-weight: 700px;
+    font-weight: 700;
 }
 .legendaFoto p{
-    font-size: 1.5vw;
+    font-size: 1vw;
 }
 
 .legendaFoto a{
