--- a/src/app/component/about/about.component.html
+++ b/src/app/component/about/about.component.html
@@ -193,7 +193,7 @@
           <div class="col">
             <ul class="none">
               <li> Parceria </li>
-              <li> Sensor de urgência </li>
+              <li> Senso de urgência </li>
               <li> Confidencialidade </li>
               <li> Criação de valor </li>
             </ul>
