--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand" class="logoUpNavbar" [routerLink]="['/home']">
+        <a class="navbar-brand" class="logoUpNavbar" [routerLink]="['/about']"> <!-- trocar para home depois -->
             <img src="assets/svgs/Logo UP.svg" class="logoNavBarTop" alt="">
         </a>
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -46,7 +46,7 @@
             <div class="col contato">
                 <h3> Contato </h3>
 
-                <p> Rua Machado Bitencourt, 205 cj 13 - Vila Clementino </p>
+                <p> Rua Marques de Itu, 306, 5o andar, cj 51 - Vila Clementino </p>
                 <p> Telefone (11) 2537-2978/(11) 2537-3252</p>
 
                 <p> up@upconsultores.com.br </p>    
