--- a/src/app/component/about/about.component.css
+++ b/src/app/component/about/about.component.css
@@ -1,14 +1,3 @@
-/** Estilos gerais */
-h2{
-    text-align: center;
-}
-
-h1{
-    text-align: center;
-    font-weight: 800;
-    color: rgb(59, 59, 117);
-}
-
 /** Foto **/
 .cabecalho{
     height: 400px;
@@ -88,7 +77,7 @@ h1{
     font-size: 0.75em;
     color: white;
     height: 80px;
-    background-color: rgb(59, 59, 117);
+    background-color: #292C80;
 }
 
 /** CSS especiais dos cards, especificos para algumas imagens **/
@@ -120,7 +109,7 @@ h1{
     list-style-type: none;
     font-size: 32px;
     font-weight: 600;
-    color: rgb(59, 59, 117);
+    color: #292C80;
 }
     
 .valores{
@@ -132,59 +121,10 @@ h1{
 
 .valores p{
     font-size: 0.8em;
-    color: rgb(59, 59, 117);
+    color: #292C80;
 }
 
 .valores .row{
     margin-top: 40px;
 }
 
-/** Serviços **/ 
-
-.servicos{
-    margin-top: 50px;
-    margin-bottom: 50px;
-    color: rgb(59, 59, 117);
-}
-
-.servicos p, .servicos li {
-    font-size: 0.8em;
-}
-
-.servicos p{
-    margin-top: 10px;
-}
-
-.servicos ul{
-    list-style-type: none;
-}
-
-.servicos h1{
-    margin-bottom: 40px;
-}
-
-.servicos .container{
-    padding: 40px;
-}
-
-.titlesUP{
-    font-size: 50px; 
-    text-transform: uppercase;
-    border-bottom: 1px solid black;
-}
-
-.titlesUP .up{
-    font-weight: 700;
-}
-
-.advisory .titlesUP{
-    color: rgb(111, 111, 247);
-}
-
-.work .titlesUP{
-    color: purple;
-}
-
-.labor .titlesUP{
-    color: rgb(163, 99, 223);
-}
