--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,16 @@ nav{
     min-height: calc(100vh - 160px);
 }
 
+h2{
+    text-align: center;
+}
+
+h1{
+    text-align: center;
+    font-weight: 800;
+    color: #292C80;
+}
+
 /* Fonts Gerais */
 
 @font-face {
