--- a/src/app/component/about/about.component.css
+++ b/src/app/component/about/about.component.css
@@ -1,3 +1,11 @@
+.aboutContent{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 /** Foto **/
 .cabecalho{
     height: 400px;
@@ -15,7 +23,7 @@
     display: block;
     top: 0;
     left: 0;
-    margin-top: -150px;
+    margin-top: -150px 0px 0px 0px;
     width: 100%;
     -webkit-filter: brightness(70%);
 }
@@ -33,8 +41,61 @@
     text-transform: uppercase;
 }
 
-/* Cards com as imagens */
+.row{
+    margin-top: 20px;
+}
 
+@media (min-width: 560px) and (max-width: 767px){
+
+    .topImgAbout, .cabecalho{
+        height: 250px;
+        width: 100%;
+    }
+
+    .legendaFoto{
+        top: 145px; 
+        left: 50px; 
+    }
+
+    .legendaFoto h5{
+        font-size: 3em;
+    }
+}
+
+@media (max-width: 559px) {
+
+    .topImgAbout, .cabecalho{
+        height: 200px;
+        width: 100%;
+    }
+
+    .perfect-fit{
+        margin: 0px;
+    }
+
+    .legendaFoto{
+        top: 90px; 
+        left: 50px; 
+    }
+
+    .legendaFoto h5{
+        font-size: 30px;
+    }    
+
+}
+
+.potencial .container{
+    padding: 40px;
+}
+
+@media(max-width: 992px) {
+    .potencial .container{
+        padding: 5px;
+    }
+}
+
+/* Cards com as imagens */
+/* 
 .potencial{
     margin-top: 50px;
 }
@@ -50,7 +111,7 @@
 
 .mycard{
     display: block;
-    border: 1px solid black;
+        : 1px solid black;
     padding: 0px;
     width: 100%;
     height: 100%;
@@ -81,28 +142,6 @@
 }
 
 /** CSS especiais dos cards, especificos para algumas imagens **/
-
-.img21{
-    margin-top: -80px !important   ;
-}
-
-.img22, .img31, .img33{
-    width: auto !important;
-    height: 100% !important;
-}
-
-.img33{
-    margin-left: -40px;
-}
-
-.img32{
-    margin-top: -40px !important;
-}
-
-.row3{
-    max-height: 200px !important;
-}
-
 
 /** Seção dos valores da empresa */
 .valores ul.none {
